Update documentation to show how to accept WebSocket connections

..., both for QAbstractHttpServer and the more commonly used
subclass QHttpServer.

This patch is specific to 6.5, because how to do this is changed in
more recent versions of QHttpServer.

Also fix usage of the term overload when it should be override.

Fixes: QTBUG-138560
Change-Id: If7e3894f3ba6b14dcf1da586f229660b6166ba28
Reviewed-by: Matthias Rauter <matthias.rauter@qt.io>
Reviewed-by: Edward Welbourne <edward.welbourne@qt.io>